--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "luxon": "^1.19.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2",
-    "react-vertical-timeline-component": "^2.5.0"
+    "react-vertical-timeline-component": "^2.5.0",
+    "shortid": "^2.2.15"
   },
   "scripts": {
     "start": "react-scripts start",
