--- a/package.json
+++ b/package.json
@@ -38,5 +38,6 @@
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.1",
     "prettier": "1.18.2"
-  }
+  },
+  "homepage": "https://track-your-parliament.github.io/track-your-parliament-frontend/"
 }
