--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "3.1.2",
     "react-vertical-timeline-component": "^2.5.0",
     "react-vis": "^1.11.7",
+    "semantic-ui-react": "^0.88.1",
     "shortid": "^2.2.15"
   },
   "scripts": {
