--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.4.3",
-    "@material-ui/icons": "^4.4.3",
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
     "luxon": "^1.19.3",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2",
     "react-vertical-timeline-component": "^2.5.0",
@@ -37,9 +37,10 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-prettier": "^6.3.0",
+    "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-prettier": "^3.1.1",
-    "prettier": "1.18.2"
+    "prettier": "1.18.2",
+    "ws": "3.3.2"
   },
   "homepage": "https://track-your-parliament.github.io/track-your-parliament-frontend/"
 }
